
syntax = "proto3";

package test.logic.CoffeeMaker;

option java_package = "test.logic.CoffeeMaker";
option java_multiple_files = true;

import "google/protobuf/any.proto";

service CoffeeShopService {

  rpc CoffeeReady(HelloReq) returns (HelloResp);

  rpc MakeCoffee(CoffeeInstructionsRequest) returns (CoffeeResults);
  rpc CleanCoffeeMachine(CoffeeCleaningRequest) returns (CoffeeCleaningResponse);
}

message HelloReq {
  string ClientName = 1;
  string Order = 2;
}

message HelloResp {
  string ready = 1;
}

message CoffeeInstructionsRequest {
  uint32 sugarLumps = 1;
  google.protobuf.Any milk = 3;
  repeated string ingredients= 4;
}

message CoffeeResults {
  repeated string outputList = 1;
}

message CoffeeCleaningRequest {
  string name = 1;
  string cleanMode = 2;
}

message CoffeeCleaningResponse {
  string CoffeeMachine = 1;
}

message CoffeeMachine {
  string name = 1;
  string status = 2;
  string dateLastCleaned = 3;
}
